@@ -14,6 +14,9 @@ CGI::Compress::Gzip - CGI with automatically compressed output
 
 =head1 DESCRIPTION
 
+[This is still alpha code, but it works in some environments.  See
+README for caveats.]
+
 CGI::Compress::Gzip extends the CGI class to auto-detect whether the
 client browser wants compressed output and, if so and if the script
 chooses HTML output, apply gzip compression on any content header for
@@ -56,7 +59,7 @@ use Carp;
 use CGI;
 
 our @ISA = qw(CGI);
-our $VERSION = '0.03';
+our $VERSION = '0.04';
 
 # Package globals
 
@@ -190,12 +193,17 @@ sub _canCompress
 
    my $compress = 1;
 
+   # Doesn't work in mod_perl yet
+   $compress &&= !$ENV{MOD_PERL};
+   $compress &&= ((!$ENV{GATEWAY_INTERFACE}) || 
+                  $ENV{GATEWAY_INTERFACE} !~ /^CGI-Perl\//);
+
    # Check programmer preference
-   $compress = $global_use_compression;
+   $compress &&= $global_use_compression;
 
    # Check that browser supports gzip
    my $acc = $ENV{HTTP_ACCEPT_ENCODING};
-   $compress &&= ($acc && $acc =~ /\bgzip\b/);
+   $compress &&= ($acc && $acc =~ /\bgzip\b/i);
 
    # Check that the output will be HTML
    $compress &&= $header && ref($header);
@@ -218,7 +226,7 @@ sub _canCompress
          elsif (($header->[$i] =~ /^-?Content[-_]Encoding$/i && ++$i) ||
              $header->[$i] =~ /^-?Content[-_]Encoding: $/i)
          {
-            if ($header->[$i] =~ /\bgzip\b/)
+            if ($header->[$i] =~ /\bgzip\b/i)
             {
                # Already gzip compressed
                $compress = 0;
@@ -311,7 +319,7 @@ package my::Zlibwrapper;
 
 CGI::Compress::Gzip also implements a helper class in package my::Zlibwrapper
 which subclasses IO::Zlib.  This helper is needed to make sure that
-output is not compressed util the CGI header is emitted.  This
+output is not compressed until the CGI header is emitted.  This
 wrappers delays the ignition of the zlib filter until it sees the
 exact same header generated by CGI::Compress::Gzip::header() pass through it's
 WRITE() method.  If you change the header before printing it, this
@@ -418,16 +426,11 @@ __END__
 
 =head1 TO DO
 
-* Improve the header mangling code
-
-* Test in mod_perl or FastCGI environments
-
-* Clean up the filehandle manipulation in _startCompression() since
-the effects of my experimentation are still apparent.
-
-* Test under Perl versions earlier than 5.8.0
+* Fix in mod_perl, test in FastCGI environments
 
 * Handle errors more gracefully in WRITE()
+
+* Use memGzip instead of IO::Zlib when output is not a real file handle
 
 =head1 SEE ALSO
 
@@ -440,6 +443,6 @@ Chris Dolan, Clotho Advanced Media, I<chris@clotho.com>
 
 =head1 LICENSE
 
-GPL v2, see the COPYING file in this distribution.
+GPLv2, see the COPYING file in this distribution.
 
 =cut
