@@ -1,10 +1,17 @@
 CGI::Compress::Gzip
 
-WARNING: as of v0.03 this is still alpha-quality code.  While it seems
+WARNING: as of v0.04 this is still alpha-quality code.  While it seems
 to run just fine for simple standalone scripts in both perl 5.6.0 and
-5.8.0, it breaks under mod_perl.  0.03 is improved over 0.02 in that
-the mod_perl headers work, but the gzip filter is still broken.
-Hopefully I can remove this message soon.  :-)
+5.8.0, it breaks under mod_perl, so the module turns itself off if it
+detects mod_perl.  0.04 just fixes some minor issues.  0.03 was an
+improvement over 0.02 in that the mod_perl headers work, but the gzip
+filter is still broken.  Hopefully I can remove this message soon.
+:-)
+
+KNOWN ISSUE: This module fails tests specifically under Windows in
+ways I do not understand, as reported by CPANPLUS testers.  There is
+some problem with my IO::Zlib tests.  If anyone knows about IO::Zlib
+failures or caveats on Windows, please let me know.
 
 This module is maintained by Clotho Advanced Media, www.clotho.com.
 Contact us at cpan@clotho.com.
