@@ -52,7 +52,9 @@ my $cmd = "$^X -Iblib/arch -Iblib/lib testhelp '$compare'";
 # no compression
 {
    my $out = `$cmd`;
-   ok($out !~ s/Content-[Ee]ncoding: gzip\r?\n//s && $out !~ s/^(Content-[Ee]ncoding:\s*)gzip, /$1/m, "CGI template (header encoding text)");
+   ok($out !~ s/Content-[Ee]ncoding: gzip\r?\n//si && 
+      $out !~ s/^(Content-[Ee]ncoding:\s*)gzip, /$1/mi, 
+      "CGI template (header encoding text)");
    is($out, $compareheader.$compare, "CGI template (body test)");
 }
 
@@ -61,7 +63,9 @@ my $cmd = "$^X -Iblib/arch -Iblib/lib testhelp '$compare'";
    local $ENV{HTTP_ACCEPT_ENCODING} = "gzip";
 
    my $out = `$cmd`;
-   ok($out =~ s/Content-[Ee]ncoding: gzip\r?\n//s || $out =~ s/^(Content-[Ee]ncoding:\s*)gzip, /$1/m, "Gzipped CGI template (header encoding text)");
+   ok($out =~ s/Content-[Ee]ncoding: gzip\r?\n//si ||
+      $out =~ s/^(Content-[Ee]ncoding:\s*)gzip, /$1/mi,
+      "Gzipped CGI template (header encoding text)");
    is($out, $compareheader.$zcompare, "Gzipped CGI template (body test)");
 }
 
